<!--
    Assignment 03

    strings.xml

    Group 1: Nicholas Boyle, Shawntraree Lucas
-->

<resources>
    <string name="app_name">Assignment03</string>

    <string name="next_button">Next</string>

    <!-- Main Activity -->
    <string name="heading">Welcome !!</string>
    <string name="button">Start</string>


    <!-- Identification Activity-->
    <string name="identification_header">Identification Info</string>

    <string name="identification_name_label">Name :</string>
    <string name="identification_name_hint">Enter Name</string>

    <string name="identification_email_label">Email :</string>
    <string name="identification_email_hint">Enter Email</string>

    <string name="identification_role_label">Role :</string>
    <string name="identification_student_radio">Student</string>
    <string name="identification_employee_radio">Employee</string>
    <string name="identification_other_radio">Other</string>


    <!-- Demographic Activity-->
    <string name="demographic_header">Demographic Info</string>

    <string name="demographic_education_label">Education:</string>

    <string name="demographic_marital_label">Marital Status:</string>

    <string name="demographic_living_label">Living Status:</string>

    <string name="demographic_income_label">Income:</string>

    <string name="demographic_na">N/A</string>

    <string name="demographic_select_button">Select</string>


    <!-- Select Education Activity-->
    <string name="select_education_header">Select Education Level</string>

    <string name="select_education_prompt">What is the highest degree or level of education you have completed?</string>

    <string name="select_education_below_high_radio">Below High School</string>
    <string name="select_education_high_radio">High School</string>
    <string name="select_education_bachelors_radio">Bachelor\'s Degree</string>
    <string name="select_education_masters_radio">Master\'s Degree</string>
    <string name="select_education_phd_radio">Ph.D. or higher</string>
    <string name="select_education_trade_radio">Trade School</string>
    <string name="select_education_prefer_radio">Prefer not to say</string>

    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>

    <!-- Select Living Activity-->
    <string name="select_living_header">Select Living Status</string>
    <string name="select_living_prompt">Which of the following describes your living status?</string>
    <string name="homeownerButton">Homeowner</string>
    <string name="renterButton">Renter</string>
    <string name="lesseButton">Lesse</string>
    <string name="otherButton">Other</string>
    <string name="preferNotToSayButton">Prefer not to say</string>

    <string name="livingSubmit">Submit</string>
    <string name="livingCancel">Cancel</string>

    <!-- Select Income Activity-->
    <string name="select_income_header">Household Income</string>
    <string name="income_progress">$50k</string>
    <string name="incomeMax">" to $100k"</string>

    <string name="incomeSubmit">Submit</string>
    <string name="incomeCancel">Cancel</string>

    <!-- Profile Activity-->
    <string name="profileHeader">Profile</string>
    <string name="profileName">"Name: "</string>
    <string name="profileEmail">"Email: "</string>
    <string name="profileRole">"Role: "</string>
    <string name="profileIncome">"Income: "</string>
    <string name="profileEducation">"Education: "</string>
    <string name="profileMaritalStatus">"Marital Status: "</string>
    <string name="profileRenter">"Renter: "</string>
    <string name="profileIncomeTwo">"Income: "</string>







</resources>