<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectEducationActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_education_header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_education_prompt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

    <RadioGroup
        android:id="@+id/educationRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptTextView">

        <RadioButton
            android:id="@+id/belowHighRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_below_high_radio" />

        <RadioButton
            android:id="@+id/highRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_high_radio" />

        <RadioButton
            android:id="@+id/bachelorsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_bachelors_radio" />

        <RadioButton
            android:id="@+id/mastersRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_masters_radio" />

        <RadioButton
            android:id="@+id/phdRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_phd_radio" />

        <RadioButton
            android:id="@+id/tradeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_trade_radio" />

        <RadioButton
            android:id="@+id/preferRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_education_prefer_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>