<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLivingStatusActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select_living_header"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:text="@string/select_living_prompt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/livingCancel"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="620dp"
        android:text="@string/livingCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/livingSubmit"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="620dp"
        android:text="@string/livingSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/livingCancel"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:layout_width="340dp"
        android:layout_height="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="127dp"
            android:layout_height="27dp"
            android:text="@string/homeownerButton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="78dp"
            android:layout_height="24dp"
            android:text="@string/renterButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="78dp"
            android:layout_height="22dp"
            android:text="@string/lesseButton" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="149dp"
            android:layout_height="29dp"
            android:text="@string/preferNotToSayButton" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="76dp"
            android:layout_height="27dp"
            android:text="@string/otherButton" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>