<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectIncomeActvity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="46dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/income_progress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_income_header"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="37dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="346dp"
        android:layout_height="15dp"
        android:layout_marginTop="84dp"
        android:max="100000"
        android:progress="50000"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/incomeMax"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/incomeCancel"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="620dp"
        android:text="@string/incomeCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/incomeSubmit"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginTop="620dp"
        android:text="@string/incomeSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>